--- a/lesson_1/lesson_1.ipynb
+++ b/lesson_1/lesson_1.ipynb
@@ -1,20 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2666f86b-a9db-4e87-9750-ed82cbe5165b",
+   "metadata": {},
+   "source": [
+    "## Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "b13d6709-997a-4718-9f56-ac16f8f68c5d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ff299f2-b5be-47cd-b509-0c0b93c0b20d",
+   "metadata": {},
+   "source": [
+    "## Read data with pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "7b4e10e1-bc83-4a8c-abe2-ae44ca77ebe0",
    "metadata": {
     "tags": []
@@ -208,21 +225,29 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/TrainingByPackt/Big-Data-Analysis-with-Python/master/Lesson01/imports-85.csv\")\n",
+    "url = 'https://raw.githubusercontent.com/htetaunglynn94/big_data_analysis_python/refs/heads/main/lesson_1/dataset/imports-85.csv'\n",
+    "df = pd.read_csv(url)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e300235d-bcdf-4a32-86c5-04c36c910849",
+   "metadata": {},
+   "source": [
+    "## Data selection and `.loc` method"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "245bb502-53d2-4140-93ef-b09d9498f719",
+   "id": "51f4f7eb-0ee1-4c6f-a288-876ca859cf6c",
    "metadata": {},
    "outputs": [],
    "source": []
